Fix WebGL modal in dark mode

--- a/src/components/webgl-modal/webgl-modal.css
+++ b/src/components/webgl-modal/webgl-modal.css
@@ -43,6 +43,10 @@
     padding: 1.5rem 2.25rem;
     text-align: center;
 }
+[theme="dark"] .body {
+    color: $text-primary;
+    background: $ui-primary;
+}
 
 /* Confirmation buttons at the bottom of the modal */
 .button-row {
